# SumCheckSimulation

./: Cargo.toml  README.md
src/: ark_sumcheck.rs  circuit_structures.rs  data_structures.rs  errors.rs  fast_prover.rs  gkr_protocol.rs  lib.rs  main.rs  naive_sum_check.rs  naive_sum_check_prover.rs  prover.rs  rng.rs  standard_verifier.rs  sumcheck.rs  timing.rs  util.rs
src/bench/: gkr.rs  mod.rs  sumcheck.rs
src/benchmarking/: circuit_data.rs  mod.rs
src/gkr/: circuit.rs  driver.rs  gkr_circuit.rs  gkr_driver.rs  gkr_protocol.rs  gkr_prover.rs  gkr_round.rs  gkr_verifier.rs  layer.rs  mod.rs  predicates.rs  prover.rs  verifier.rs
src/provers/: fast.rs  libra.rs  mod.rs  naive.rs  prover_phases.rs
src/structures/: circuit_structures.rs  data_structures.rs  gkr_protocol.rs  layer.rs  mod.rs
src/sumcheck/: fast.rs  instance.rs  mod.rs  naive.rs  protocol.rs  tests.rs  verifier.rs
src/verifiers/: mod.rs  standard_verifier.rs
