[package]
name = "sum-check-simulation"
authors = ["Carl-Emil H. Andersen"]
version = "0.1.0"
edition = "2024"

[dependencies]
ark-poly = { version = "0.5.0" }
ark-ff = { version = "0.5" }
ark-std = "0.5.0"
ark-test-curves = { version = "0.5.0" }
ark-bls12-381 = "0.5.0"
ark-serialize = "0.5.0"
blake2 = "0.10.6"
rand = "0.8.5"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
